Set overall color to Gray

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    background-color: #ff6e61;
+    BACKGROUND-COLOR: darkgray;
 }
 
 .dash-app {
